Attempt to resolve contrast issue for text on background image/color in WebAIM

--- a/css/default.css
+++ b/css/default.css
@@ -88,7 +88,7 @@ main {
 }
 
 .sidebar {
-	background: url(../assets/images/bg-sidebar-mobile.svg) center / cover no-repeat;
+	background: url(../assets/images/bg-sidebar-mobile.svg) center / cover no-repeat var(--color-primary-purplish-blue);
 	height: 10.5rem;
 	display: flex;
 	justify-content: center;
